--- a/verslag/report.bib
+++ b/verslag/report.bib
@@ -33,7 +33,9 @@
 } % https://www.researchgate.net/publication/220605413_Leveled-Commitment_Contracting_A_Backtracking_Instrument_for_Multiagent_Systems
 
 @INPROCEEDINGS{DynCNET, 
-author={D. Weyns and N. Boucke and T. Holvoet and B. Demarsin}, 
+author={Danny Weyns and
+Nelis Bouck{\'{e}} and
+Tom Holvoet and Bart Demarsin}, 
 booktitle={First International Conference on Self-Adaptive and Self-Organizing Systems (SASO 2007)}, 
 title={Dyn{CNET}: A Protocol for Dynamic Task Assignment in Multiagent Systems}, 
 year={2007}, 
@@ -89,6 +91,9 @@ month={Dec},}%http://www2.cs.siu.edu/~hexmoor/classes/CS539-F10/Smith.pdf
 author = {Mia Hubert},
 title = {Statistische modellen en data-analyse},
 date = {2015},
+year = {2015},
+language = {Dutch},
+isbn = {9789462921931},
 publisher = {Acco}
 }
 
@@ -101,4 +106,47 @@ publisher = {Acco}
   pages={978},
   year={1979},
   publisher={American Psychological Association}
+}
+
+@inproceedings{DBLP:conf/eumas/WeynsBHS06,
+    author    = {Danny Weyns and
+    Nelis Bouck{\'{e}} and
+    Tom Holvoet and
+    Kurt Schelfthout},
+    title     = {Dyn{CNET}: {A} Protocol for Flexible Task Assignment Applied in an {AGV}
+    Transportation System},
+    booktitle = {Proceedings of the 4th European Workshop on Multi-Agent Systems EUMAS'06,
+    Lisbon, Portugal, December 14-15, 2006},
+    year      = {2006},
+    crossref  = {DBLP:conf/eumas/2006},
+    url       = {http://ceur-ws.org/Vol-223/55.pdf},
+    timestamp = {Thu, 29 May 2008 07:33:36 +0200},
+    biburl    = {http://dblp2.uni-trier.de/rec/bib/conf/eumas/WeynsBHS06},
+    bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+@proceedings{DBLP:conf/eumas/2006,
+    editor    = {Barbara Dunin{-}Keplicz and
+    Andrea Omicini and
+    Julian A. Padget},
+    title     = {Proceedings of the 4th European Workshop on Multi-Agent Systems EUMAS'06,
+    Lisbon, Portugal, December 14-15, 2006},
+    series    = {{CEUR} Workshop Proceedings},
+    volume    = {223},
+    publisher = {CEUR-WS.org},
+    year      = {2006},
+    timestamp = {Thu, 29 May 2008 07:33:36 +0200},
+    biburl    = {http://dblp2.uni-trier.de/rec/bib/conf/eumas/2006},
+    bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@techreport{weyns2007dyncnet,
+    author = {Weyns, Danny and Bouck{\'e}, Nelis and Holvoet, Tom and Demarsin, Bart},
+    title = {Dyn{CNET}: {A} protocol for flexible
+    transport assignment in {AGV}
+    transportation systems},
+    type = {Report},
+    institution = {KU Leuven, Department of Computer Science},
+    date = {February 2007},
+    number = {CW 478},
+    year = {2007}
 }
