--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -77,6 +77,7 @@
 \section{Introduction}
 \outline{Bevat waarom verslag moet lezen (samen met conclusie 1 geheel). The last paragraph of the introduction traditionally says “This report is organised as
 follows. Section 1 introduces . . . ”.}
+\commentV{pickup-and-delivery problem}
 \subsection{Objectives}
 The objective of this paper is to investigate whether two extensions of Contract Net (CNET) \cite{CNETStandard,CNET}, namely Contract Net with Confirmation Protocol (CNCP) \cite{CNCP} and Dynamic Contract Net (DynCNET) \cite{DynCNET} are an improvement on CNET itself.
 
@@ -126,7 +127,7 @@ A manager initiates the contract negotiation process by adversiting that task wi
 
 Whenever a task announcement arrives at an agent that wants to act as a contractor, all of these parts of the announcement allow contractors to decide whether and when to submit a bid. They add the announcement to a list of received and not expired announcements if they're eligible. The announcements in the list are ranked on interest to the agent. This ranking is a task-specific operation and is based on the information contained within the task announcement.
 
-A busy agent cannot bid while busy, but continues to process the task announcements while executing its task. When this task completes, it can then check the list of task announcements and pick a task to submit a bid on. An idle agent will decide to bid on a task either immediately when it arrives or when it expires. It either submits a bid to the most interesting task or waits for new (better) task anouncements. In a bid, an agent describes its specification in the node abstraction slot. It can also indicate additional information that will be required if the agent may execute the task. Whenever an agent submits a bid to a task, it allocates some resources to that task. This is called early commitment. That agent can then not bid on other tasks at the same moment. This is done to avoid too many task awards to one agent, which would all need to be queued and would slow down the system performance by putting too much load on one agent, which means tasks get executed later.
+A busy agent cannot bid while busy, but continues to process the task announcements while executing its task. When this task completes, it can then check the list of task announcements and pick a task to submit a bid on. An idle agent will decide to bid on a task either immediately when it arrives or when it expires. It either submits a bid to the most interesting task or waits for new (better) task announcements. In a bid, an agent describes its specification in the node abstraction slot. It can also indicate additional information that will be required if the agent may execute the task. Whenever an agent submits a bid to a task, it allocates some resources to that task. This is called early commitment. That agent can then not bid on other tasks at the same moment. This is done to avoid too many task awards to one agent, which would all need to be queued and would slow down the system performance by putting too much load on one agent, which means tasks get executed later.
 
 Bids arrive at the manager and are also ranked and stored in a list until the task can be awarded. The manager can either award a contract immediately if a satisfactory bid arrives (even before the expiration time) or wait for further bids. When the task announcement expires, it can either award the contract to the best bidder in its list or advertise the task again (immediately or after waiting some time). The task is therefore not necessarily awarded when it expires. If a manager awards a contract, it sends a message to the winning contractor, who can start executing the task. When the contractor is finished, it sends a report to the manager with the results of the execution.
 
@@ -144,7 +145,7 @@ To resolve this issue, in the CNCP the full commitment to a task is moved to the
 CNCP requires two more messages to allocate a task: one to request the execution of a task by the manager and one reply to this message by the contractor. If the first contacter bidder refuses, the next best bidder has to be tried and two messages need to be sent. In the worst case this means 2$n$ extra messages (with $n$ the number of bidders) must be sent.
 
 \subsection{Dynamic Contract Net}
-The Dynamic Contract Net Protocol, or DynCNET, was conceived as an extension to the Contract Net Protocol by Weyns et al in 2007 \cite{DynCNET}. 
+The Dynamic Contract Net Protocol, or DynCNET, was conceived as an extension to the Contract Net Protocol by Weyns et al. \cite{DynCNET, DBLP:conf/eumas/WeynsBHS06, weyns2007dyncnet}. 
 
 DynCNET tries to improve on CNET by adding dynamism to the allocation and execution of tasks. More specifically, it addresses the fact that an agent usually has to do some preparation when it is assigned a task before it can actually start executing this task. DynCNET allows contracts to be switched during this preparation phase.
 
@@ -152,7 +153,7 @@ DynCNET changes the acceptance of task by a winning contractor to a provisional 
 
 The synchronization between managers and contractor to assess their current state requires some additional messaging. If a manager cancels a contract, it needs to notify the original contractor that the task has been awarded to another agent. Inversely, a contractor that takes up another task needs to notify the manager of the original task that it is no longer committed to executing that original task. Finally the contractor needs to send a message to the manager when it starts executing the task, so the manager can stop announcing the task to other agents.
 
-\subsection{Alternative Contract Net Extensions}
+\subsection{Alternative extensions}
 In literature, other extensions of CNET can be found. \cite{TentativeBidding} describes a protocol that divides the bidding phase into two: pre-bidding and definitive bidding. The first round, pre-bidding, is only tentative. When bids have been received, instead of awarding the task to a participant the initiator informs all the participants of the tentative results. Based on these tentative results and on how the world and other running bidding processes evolve, participants can still change their bids. Once a participant has been tentatively accepted, it can send a definitive bid to the initiator.
 
 If this bid is still better than all the tentative bids from the other participants, the participant will be awarded the task and both agents commit to the contract. All other participants will be informed that the bidding process is finished. If the definitive bid is not the best bid, the participant gets tentatively or definitively declined. In case of the former, it can retry to get the task by submitting a new tentative bid. This protocol can be seen as an extension on CNCP. Participants who get accepted, can use the definitive bid to accept or decline: they will submit a high bid in the former case and a low bid in the latter. The advantage of this protocol over CNCP is that participants who initially get rejected can still improve their bid.
