--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -79,7 +79,7 @@
 follows. Section 1 introduces . . . ”.}
 \commentV{pickup-and-delivery problem}
 \subsection{Objectives}
-The objective of this paper is to investigate whether two extensions of Contract Net (CNET) \cite{CNETStandard,CNET}, namely Contract Net with Confirmation Protocol (CNCP) \cite{CNCP} and Dynamic Contract Net (DynCNET) \cite{DynCNET} are an improvement on CNET itself.
+The objective of this report is to investigate whether two extensions of Contract Net (CNET) \cite{CNETStandard,CNET}, namely Contract Net with Confirmation Protocol (CNCP) \cite{CNCP} and Dynamic Contract Net (DynCNET) \cite{DynCNET} are an improvement on CNET itself.
 
 We do this in a drone delivery setting where a company owns a fleet of drones (or UAVs, unmanned aerial vehicles) that receives orders from clients, collects the ordered package at one of several warehouses and delivers them to that client. The drones autonomously receive, process and deliver the client orders. The goal is to maximize the company's profit, by having the most suitable drone serve each order. Clients have a time limit for their deliveries, after which the company needs to pay a fine.  Drones can break down and are constrained by their batteries, which can be charged at a warehouse. Drones cannot collide with each other.
 
