Citations in right order

--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -145,7 +145,7 @@ To resolve this issue, in the CNCP the full commitment to a task is moved to the
 CNCP requires two more messages to allocate a task: one to request the execution of a task by the manager and one reply to this message by the contractor. If the first contacter bidder refuses, the next best bidder has to be tried and two messages need to be sent. In the worst case this means 2$n$ extra messages (with $n$ the number of bidders) must be sent.
 
 \subsection{Dynamic Contract Net}
-The Dynamic Contract Net Protocol, or DynCNET, was conceived as an extension to the Contract Net Protocol by Weyns et al. \cite{DynCNET, DBLP:conf/eumas/WeynsBHS06, weyns2007dyncnet}. 
+The Dynamic Contract Net Protocol, or DynCNET, was conceived as an extension to the Contract Net Protocol by Weyns et al. \cite{DynCNET, weyns2007dyncnet, DBLP:conf/eumas/WeynsBHS06}. 
 
 DynCNET tries to improve on CNET by adding dynamism to the allocation and execution of tasks. More specifically, it addresses the fact that an agent usually has to do some preparation when it is assigned a task before it can actually start executing this task. DynCNET allows contracts to be switched during this preparation phase.
 
