--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -162,7 +162,7 @@ If this bid is still better than all the tentative bids from the other participa
 
 One of the main differences between \cite{TentativeBidding} and ICN is that in ICN new task announcements are issued, while the same task announcement is reused in \cite{TentativeBidding}. An initiator in the ICN protocol can thus actively try to increase the price of the contract.  
 
-\cite{LeveledCommitment} uses game theory to prove that a leveled commitment is to be preferred over full commitment in all situations. In the negotiation of a contract in this protocol, a decommitting penalty is agreed, which might be different for both agents. When an agent wants to cancel the contract, it then has to pay this decommitting fee to the other agent. The fee becomes a factor in calculating whether or not it is interesting to cancel the current contract in favor of another contract\footnote{The paper proves (again using game theory) that the consideration by an agent of canceling a contract is more than just checking if the profit of the new contract is higher than the decommitting fee that would then have to be paid. The other agent might decommit if this agent doesn't decommit, which means that this agent would then lose out on both this contract and the new contract.}. It also allows for contracts that were not possible using full commitment. Normally the benefit from an offered contract could be lower than the expected benefit from other contracts that have not yet been announced, which means the agent would wait and not commit to that offered contract. By having the right decommitting fees, this offered leveled commitment contract could become interesting and could be taken up.
+\cite{LeveledCommitment} uses game theory to prove that a leveled commitment is to be preferred over full commitment in all situations. In the negotiation of a contract in this protocol, a decommitting penalty is agreed, which might be different for both agents. When an agent wants to cancel the contract, it then has to pay this decommitting fee to the other agent. The fee becomes a factor in calculating whether or not it is interesting to cancel the current contract in favor of another contract\footnote{The paper proves (again using game theory) that the consideration by an agent of canceling a contract is more than just checking if the profit of the new contract is higher than the decommitting fee that would then have to be paid. The other agent might decommit if this agent doesn't decommit, which means that it could have decommitted from the contract without paying the fee}. It also allows for contracts that were not possible using full commitment. Normally the benefit from an offered contract could be lower than the expected benefit from other contracts that have not yet been announced, which means the agent would wait and not commit to that offered contract. By having the right decommitting fees, this offered leveled commitment contract could become interesting and could be taken up.
 
 \commentV{uitleggen dat we deze niet geimplementeerd hebben\commentY{Dan in design sectie?}}
 
