Warehouse distribution typo's

--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -171,7 +171,7 @@ One of the main differences between \cite{TentativeBidding} and ICN is that in I
 \subsection{Design}
 We consider a logistics problem where a company serves an area with a fleet of drones. In this area, a number of clients appear with an order for a specific product. One of the drones takes up the order and is dispatched to a warehouse to collect a package with that product. Finally it flies to the client to deliver the package. The goal is to maximize the profit earned on making these deliveries.
 
-Across the world several warehouses are located. For simplification, these warehouses have an infinite stock of every package that a client could potentially order. Drones can pick up packages at these warehouses for a price that varies per warehouse in a range of 80 to 120\% of that package's market price. These warehouses are divided over the whole area in such a way that a clustering of warehouses is avoided as much as possible. To achieve niet, the number of warehouse is split in powers of two (e.g. 5 = 4 ($2^2$) + 1 ($2^0$)). For every power of two, the area is divided in the that number of equiareal rectangles, each containing one warehouse at a uniformly random position.
+Across the world several warehouses are located. For simplification, these warehouses have an infinite stock of every package that a client could potentially order. Drones can pick up packages at these warehouses for a price that varies per warehouse in a range of 80 to 120\% of that package's market price. These warehouses are divided over the whole area in such a way that a clustering of warehouses is avoided as much as possible. To achieve this, the number of warehouse is split in powers of two (e.g. 5 = 4 ($2^2$) + 1 ($2^0$)). For every power of two x, the whole area is divided in x equiareal rectangles, each containing one warehouse at a uniformly random position.
 
 Drones can unexpectedly crash and fail. The drone is then written off and the cost of a drone is subtracted from the profit. Drones are also constrained by their batteries, they only have a limited range before they need to charge. Whenever the battery level gets very low, the chances of crashes increase, as the power that comes from the batteries becomes less and less stable. Drones can charge their batteries at the warehouses for a certain cost. They will intelligently choose a route when delivering a package to try as much as possible to avoid having a low battery.
 
