--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -351,7 +351,7 @@ Figures \ref{fig:drones-profit} to \ref{fig:dynamicclients-profit-grid2} show th
 \MASplotThree
 {dynamicclients-profit}{The influence of the number of clients that appear after the start of the simulation on the profit}
 {dynamicclients-profit-largeNbDrones}{The influence of the number of clients that appear after the start of the simulation on the profit, with a large number of drones}
-{drones-deliverytime}{The influence of the number of drones on the delivery time\commentY{omzetten naar seconden ipv milliseconden?}}
+{drones-deliverytime}{The influence of the number of drones on the delivery time}
 
 \MASplotThree
 {drones-delivered}{The influence of the number of drones on the number of clients that are not delivered}
